add functions implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.5)
 
-set(BOOST_VERSION 1.67)
+set(BOOST_VERSION 1.58)
 include(ExternalProject)
 
 # For some reason we need to define both of these
@@ -8,7 +8,7 @@ add_definitions(-DBOOST_COROUTINES_NO_DEPRECATION_WARNING)
 add_definitions(-DBOOST_COROUTINE_NO_DEPRECATION_WARNING)
 
 ################################################################################
-project(ouinet)
+project(lux-lib-crypto)
 
 #find_package(OpenSSL REQUIRED)
 find_package(Boost ${BOOST_VERSION} REQUIRED COMPONENTS filesystem
@@ -20,7 +20,6 @@ find_package(Boost ${BOOST_VERSION} REQUIRED COMPONENTS filesystem
         thread
         date_time
         system)
-#find_package(Threads)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall -ggdb ${SANITIZE}")
 
@@ -28,28 +27,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall -ggdb ${SANITI
 ################################################################################
 include_directories(
         "${Boost_INCLUDE_DIR}"
+        "src"
 )
 
 
 ################################################################################
-# Config file directory
-
-
-set(config_targets )
-
-if(NOT ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
-    add_custom_target(config ALL DEPENDS test)
-    foreach(config_file ${config_files})
-        get_filename_component(config_dir ${config_file} DIRECTORY)
-        add_custom_command(
-                OUTPUT ${CMAKE_BINARY_DIR}/${config_file}
-                MAIN_DEPENDENCY ${CMAKE_SOURCE_DIR}/${config_file}
-                COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/${config_dir}
-                COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/${config_file} ${CMAKE_BINARY_DIR}/${config_file}
-        )
-        set(config_targets ${config_targets} ${CMAKE_BINARY_DIR}/${config_file})
-    endforeach()
-    add_custom_target(appel ALL DEPENDS ${config_targets})
-endif()
-
-################################################################################
+file(GLOB_RECURSE SRC
+        "*.c"
+        "*.h"
+        "*.hpp"
+        "*.tpp"
+        "*.cpp")
+add_library(${PROJECT_NAME} ${SRC})
